--- a/css/styles.css
+++ b/css/styles.css
@@ -28,17 +28,64 @@ a {
   text-decoration: none;
 }
 
-.box {
-  background: #fff;
+.box__wrapper {
   width: 800px;
   height: 400px;
+  overflow: hidden;
+}
+.box__wrapper .box {
+  background: #fff;
+  width: 100%;
+  height: 100%;
   border-radius: 16px;
+  padding: 12px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 12px;
+}
+.box__wrapper .box .graphic {
+  align-self: center;
+}
+.box__wrapper .box .graphic img {
+  max-width: 400px;
+  transform: translateX(-50px);
+}
+.box__wrapper .box .content {
+  padding: 30px 60px;
+  color: #1d1e35;
 }
 
 @media only screen and (max-width: 900px) {
-  .box {
-    width: 400px;
+  html,
+body {
+    padding-top: 8%;
+    overflow-x: visible;
+  }
+
+  .box__wrapper {
+    width: 380px;
     height: 600px;
+    overflow: visible;
+  }
+  .box__wrapper .box {
+    padding: 0px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-column-gap: 0px;
+  }
+  .box__wrapper .box .graphic {
+    margin: 0 auto;
+  }
+  .box__wrapper .box .graphic img {
+    max-width: 250px;
+    transform: translateX(-20px) translateY(-100px);
+  }
+  .box__wrapper .box .content {
+    margin: 0;
+    padding: 0;
+    transform: translateY(-50px);
+    text-align: center;
   }
 }
 
