--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,16 +39,62 @@ a {
   text-decoration: none;
 }
 
-.box {
-  background: #fff;
+.box__wrapper {
   width: 800px;
   height: 400px;
-  border-radius: 16px;
+  overflow: hidden;
+  .box {
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    padding: 12px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 12px;
+    .graphic {
+      align-self: center;
+      img {
+        max-width: 400px;
+        transform: translateX(-50px);
+      }
+    }
+    .content {
+      padding: 30px 60px;
+      color: $text_blue;
+    }
+  }
 }
 
 @media only screen and (max-width: 900px) {
-  .box {
-    width: 400px;
+  html,
+  body {
+    padding-top: 8%;
+    overflow-x: visible;
+  }
+  .box__wrapper {
+    width: 380px;
     height: 600px;
+    overflow: visible;
+    .box {
+      padding: 0px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 2fr;
+      grid-column-gap: 0px;
+      .graphic {
+        margin: 0 auto;
+        img {
+          max-width: 250px;
+          transform: translateX(-20px) translateY(-100px);
+        }
+      }
+      .content {
+        margin: 0;
+        padding: 0;
+        transform: translateY(-50px);
+        text-align: center;
+      }
+    }
   }
 }
