--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,7 +38,11 @@ body {
 a {
   text-decoration: none;
 }
-
+.box__img {
+  position: absolute;
+  transform: translate(-60%, 180%);
+  z-index: 20;
+}
 .box__wrapper {
   width: 800px;
   height: 450px;
@@ -80,6 +84,9 @@ a {
     padding-top: 8%;
     overflow-x: visible;
   }
+  .box__img {
+    transform: translate(-4%, -28%) scale(0.5);
+  }
   .box__wrapper {
     width: 380px;
     height: 600px;
@@ -93,13 +100,11 @@ a {
         margin: 0 auto;
         img {
           max-width: 250px;
-          transform: translateX(-20px) translateY(-100px);
+          transform: translateX(-20px) translateY(-120px);
         }
         .pattern {
-          position: absolute;
           top: -65%;
           right: 6%;
-          transform: scale(1);
         }
       }
       .content {
