--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,8 +103,9 @@ a {
           transform: translateX(-20px) translateY(-120px);
         }
         .pattern {
-          top: -65%;
+          top: -75%;
           right: 6%;
+          transform: scale(1);
         }
       }
       .content {
