--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ a {
 
 .box__img {
   position: absolute;
-  transform: translate(-60%, 180%);
+  transform: translate(-60%, 100%);
   z-index: 20;
 }
 
@@ -68,6 +68,68 @@ a {
   padding: 30px 60px;
   color: #1d1e35;
 }
+.box__wrapper .box .content .faq__wrapper .question {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+.box__wrapper .box .content .faq__wrapper .question .arrow {
+  width: 14px;
+  height: 10px;
+}
+.box__wrapper .box .content .faq__wrapper .answer {
+  pointer-events: none;
+  padding: 0 4.5px;
+  opacity: 0;
+  transform: translateY(-10px);
+}
+.box__wrapper .box .content .faq__wrapper .answer .answ {
+  text-align: left;
+  max-width: 250px;
+}
+
+hr {
+  padding: 6px 0;
+}
+
+@keyframes openAnswer {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(10px);
+  }
+}
+@keyframes closeAnswer {
+  0% {
+    opacity: 1;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+}
+.openedQ {
+  font-weight: 600;
+}
+
+.openedA {
+  animation: openAnswer 400ms ease-out forwards;
+}
+
+.closedA {
+  animation: closedAnswer 400ms ease-in forwards;
+}
+
+.openedIcon {
+  transform: rotate(180deg);
+}
 
 @media only screen and (max-width: 900px) {
   html,
@@ -77,7 +139,7 @@ body {
   }
 
   .box__img {
-    transform: translate(-4%, -28%) scale(0.5);
+    transform: translate(-5%, -50%) scale(0.5);
   }
 
   .box__wrapper {
